# Swagger_Demo/swagger.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "title": "Tasks API",
     "contact": {
-      "email": "abc@gmail.com"
+      "email": "sanjaysamantra2@gmail.com"
     },
     "license": {
       "name": "Apache 2.0",
@@ -22,6 +22,41 @@
         "description": "Get all the tasks",
         "produces": ["application/json"],
         "parameters": [],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/todosResponse"
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid status value",
+            "schema": {
+              "$ref": "#/definitions/InvalidResponse"
+            }
+          }
+        }
+      }
+    },
+    "/todos/{todoId}": {
+      "get": {
+        "summary": "Get 1  tasks",
+        "description": "Get 1 tasks",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "todoId",
+            "description": "todoId",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "successful operation",
